--- a/sistemacafeteria/nbproject/private/private.properties
+++ b/sistemacafeteria/nbproject/private/private.properties
@@ -1,4 +1,4 @@
 deploy.ant.properties.file=C:\\Users\\paolo\\AppData\\Roaming\\NetBeans\\23\\tomcat110.properties
-j2ee.server.home=C:/Users/paolo/OneDrive/Documents/Proyecto/Nueva carpeta/apache-tomcat-11.0.1
-j2ee.server.instance=tomcat110:home=C:\\Users\\paolo\\OneDrive\\Documents\\Proyecto\\Nueva carpeta\\apache-tomcat-11.0.1
+j2ee.server.home=C:/Users/paolo/OneDrive/Documents/Github/organico.cafeteria.final/sistemacafeteria/Librer\u00edas/apache-tomcat-11.0.1
+j2ee.server.instance=tomcat110:home=C:\\Users\\paolo\\OneDrive\\Documents\\Github\\organico.cafeteria.final\\sistemacafeteria\\Librer\u00edas\\apache-tomcat-11.0.1
 user.properties.file=C:\\Users\\paolo\\AppData\\Roaming\\NetBeans\\23\\build.properties
