--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ Recursos/apache-tomcat-10.1.33/work/Catalina/localhost/Cafeteria/org/apache/jsp/
 Recursos/apache-tomcat-10.1.33/work/Catalina/localhost/manager/org/apache/jsp/WEB_002dINF/jsp/_401_jsp.class
 Recursos/apache-tomcat-10.1.33/work/Catalina/localhost/manager/org/apache/jsp/WEB_002dINF/jsp/_401_jsp.java
 /Cafeteria/build/
+/Cafeteria2/Cafeteria/build/
+/Cafeteria2/Cafeteria/nbproject/private/
